<resources>
    <string name="app_name">Podium</string>
    <string name="facebook_app_id">800116240172464</string>
    <string name="fb_login_protocol_scheme">fb800116240172464</string>
    <string name="google_client_web">468467794764-qgocb4o3p6vrfc6r51d9pu67kq3t7f3d.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_with_google">{typcn-social-google-plus 38dp} %1$s Connect with Google</string>
    <string name="login_with_facebook">{fa-facebook-f 25dp} %1$s Connect with Facebook</string>
    <string name="login_with_email">{fa-envelope-o 24dp} %1$s Connect with Email</string>
    <string name="register">Register</string>
    <string name="continueWithEmail">Continue with email</string>
    <string name="checkYourInbox">Check your inbox!</string>
    <string name="emailMagicLink">We have sent you a magic link to your email. Click on it sign-in!</string>
    <string name="putYourName">Whats your full name?</string>
    <string name="putYourAlias">Choose your alias</string>

    <string name="section_home_title">Home</string>
    <string name="section_create_title">Create</string>
    <string name="section_profile_title">Profile</string>
    <string name="featured_games_title">Featured Games</string>
    <string name="popular_sports_title">Popular Sports</string>
    <string name="upcoming_game_title">Upcoming games</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>
    <string name="no_participants_text">No Participants for this game yet.</string>
    <string name="join_game_button_title">JOIN GAME</string>

    <string name="choose_sport_for_game">Choose a sport for the game</string>
    <string name="step1">Choose a sport for the game</string>
    <string name="step2">Give some details to your oponents</string>
    <string name="step3">Invite others to play!</string>
    <string name="Title">Title</string>
    <string name="When">When?</string>
    <string name="Details">Details</string>
    <string name="step4">Congrats! The game has been created successfully</string>

</resources>
