<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_login"
    tools:context="com.altintro.podium.activity.RegisterActivity">

    <fragment
        android:id="@+id/fragment_header"
        class="com.altintro.podium.fragment.HeaderFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ProgressBar
        android:id="@+id/loader_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:keepScreenOn="true"
        android:visibility="gone" />

    <!-- CONTAINER INTRODUCE EMAIL -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_inputEmail"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_header">

        <Button
            android:id="@+id/btn_continue_with_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login_email"
            android:padding="5dp"
            android:text="@string/continueWithEmail"
            android:textAllCaps="false"
            android:textSize="@dimen/text_button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itl_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/itl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/it_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

    <!-- CONTAINER MESSAGE -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_header">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/tv_checkYourInbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/checkYourInbox"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/tv_emailMagicLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/emailMagicLink"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_checkYourInbox" />

    </android.support.constraint.ConstraintLayout>

    <!-- CONTAINER VIEW REGISTER WITH EMAIL -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_header">

        <TextView
            android:id="@+id/tv_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/putYourName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/itl_fullName"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullName"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/it_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/putYourAlias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itl_fullName" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/itl_alias"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_alias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alias">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/it_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </android.support.design.widget.TextInputLayout>

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_login_height"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_login_email"
            android:fontFamily="@string/com_facebook_loginview_log_in_button"
            android:textAlignment="center"
            android:textColor="@color/com_facebook_button_text_color"
            android:textSize="@dimen/text_button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itl_alias"
            android:text="@string/register"/>

    </android.support.constraint.ConstraintLayout>

    <!-- CONTAINER VIEW REGISTER WITH FACEBOOK OR GOOGLE -->



</android.support.constraint.ConstraintLayout>
